[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/SmoothPath.gd" type="Script" id=1]
[ext_resource path="res://src/WaterBody.gd" type="Script" id=2]
[ext_resource path="res://src/water_shader.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/tint = Color( 1, 1, 1, 1 )

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=2]

[node name="WaterBody" type="Node2D"]
script = ExtResource( 2 )

[node name="WaterPolygon" type="Polygon2D" parent="."]
material = SubResource( 3 )

[node name="WaterBorder" type="Path2D" parent="."]
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )
script = ExtResource( 1 )
spline_length = 10.0

[node name="WaterBodyArea" type="Area2D" parent="." groups=["Water"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterBodyArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="WaterBodyArea" to="." method="_on_WaterBodyArea_area_entered"]
[connection signal="area_exited" from="WaterBodyArea" to="." method="_on_WaterBodyArea_area_exited"]
